# webdav-simple-rs

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
src/backend/: fs.rs  mod.rs
src/backend/fs/: driver.rs
src/backend/quark/: base_client.rs  driver.rs  handle.rs  mod.rs  types.rs
src/handler/: mod.rs
src/xml/: mod.rs
