[package]
name = "webdav-rs"
version = "0.1.0"
edition = "2021"
authors = ["kinokosu3 <kinokosu3@outlook.com>"]
description = "A WebDAV server implementation in Rust"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
async-trait = "0.1"
reqwest = "0.12"
thiserror = "1.0"
bytes = "1.0"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
xml-rs = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }
hyper = { version = "1.0", features = ["full"] }
toml = "0.8"
dashmap = "6.1.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
